dex-gitops-route-edge.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2021-07-28T01:11:35Z"
  labels:
    app: dex-gitops
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    time: "2021-07-28T01:11:35Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:host: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:tls:
          .: {}
          f:termination: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: Mozilla
    operation: Update
    time: "2021-07-28T01:13:29Z"
  name: dex-gitops
  namespace: dex-gitops
  resourceVersion: "18573370"
  uid: 9a15f2ac-2506-4ef9-bbe2-51480517a076
spec:
  host: dex-gitops.apps.dell-r730-008.demo.red-chesterfield.com
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: dex-gitops
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2021-07-28T01:12:27Z"
      status: "True"
      type: Admitted
    host: dex-gitops.apps.dell-r730-008.demo.red-chesterfield.com
    routerCanonicalHostname: router-default.apps.dell-r730-008.demo.red-chesterfield.com
    routerName: default
    wildcardPolicy: None
