dex-gitops-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: "2021-07-28T01:07:28Z"
  labels:
    app: dex-gitops
  managedFields:
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:labels:
          .: {}
          f:app: {}
      f:spec:
        f:host: {}
        f:port:
          .: {}
          f:targetPort: {}
        f:to:
          f:kind: {}
          f:name: {}
          f:weight: {}
        f:wildcardPolicy: {}
    manager: Mozilla
    operation: Update
    time: "2021-07-28T01:07:28Z"
  - apiVersion: route.openshift.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        f:ingress: {}
    manager: openshift-router
    operation: Update
    time: "2021-07-28T01:07:28Z"
  name: dex-gitops
  namespace: dex-gitops
  resourceVersion: "18566765"
  uid: 71678a61-c3e5-4171-84bb-50ac48878a41
spec:
  host: dex-gitops.apps.dell-r730-008.demo.red-chesterfield.com
  port:
    targetPort: http
  to:
    kind: Service
    name: dex-gitops
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2021-07-28T01:07:28Z"
      status: "True"
      type: Admitted
    host: dex-gitops.apps.dell-r730-008.demo.red-chesterfield.com
    routerCanonicalHostname: router-default.apps.dell-r730-008.demo.red-chesterfield.com
    routerName: default
    wildcardPolicy: None
